Change ErminName's internal representation and add fromSnake method